--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/image": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "nuxt": "^3.20.2",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
